--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.jakarta.persistence.validation.mode=none
+
+#Email Properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=darshanl1254@gmail.com
+spring.mail.password=wgvx wkte blyp caxx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
